Change title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
-title: ADA Template Website
-description: A template website for ADA
+title: Genders and genres
+description: The Vaneau team data story
 show_downloads: True
 navigation:
   - title: Home
